fix author bio alignment on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -477,7 +477,7 @@ img.avatar {
 }
 
 p.author-bio {
-	margin-left:120px;
+	margin-left:135px;
 }
 
 .author-name {
